<resources>
    <string name="app_name">NewSports</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_store">Store</string>
    <string name="menu_news">News</string>
    <string name="menu_logout">Logout</string>

    <string name="title_home">Home</string>
    <string name="title_post">Post</string>
    <string name="title_lookingFor">Looking_For</string>
    <string name="title_message">Message</string>
    <string name="title_schedule">Schedule</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>