<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_lookingFor"
        android:icon="@drawable/baseline_insert_link_24"
        android:title="@string/title_lookingFor" />

    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/baseline_add_circle_outline_24"
        android:title="@string/title_post" />


    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/baseline_schedule_24"
        android:title="@string/title_schedule" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/baseline_message_24"
        android:title="@string/title_message" />

</menu>